@@ -155,6 +155,7 @@ def build(bld):
         'model/tcp-bic.cc',
         'model/tcp-yeah.cc',
         'model/tcp-illinois.cc',
+        'model/tcp-htcp.cc',
         'model/tcp-rx-buffer.cc',
         'model/tcp-tx-buffer.cc',
         'model/tcp-option.cc',
@@ -259,6 +260,7 @@ def build(bld):
         'test/tcp-bic-test.cc',
         'test/tcp-yeah-test.cc',
         'test/tcp-illinois-test.cc',
+        'test/tcp-htcp-test.cc',
         'test/tcp-zero-window-test.cc',
         'test/tcp-pkts-acked-test.cc',
         'test/tcp-rtt-estimation.cc',
@@ -369,6 +371,7 @@ def build(bld):
         'model/tcp-bic.h',
         'model/tcp-yeah.h',
         'model/tcp-illinois.h',
+        'model/tcp-htcp.h',
         'model/tcp-socket-base.h',
         'model/tcp-tx-buffer.h',
         'model/tcp-rx-buffer.h',
